@@ -1,42 +1,61 @@
 package cl.sanos_y_salvos.ms_base.api.config;
 
+import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.oauth2.jwt.JwtDecoder;
+import org.springframework.security.oauth2.jwt.NimbusJwtDecoder; 
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
 
 @Configuration
-@EnableWebSecurity
+@SuppressWarnings("unused")
 public class SecurityConfig {
-    
+
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-    http
-        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-        .csrf(csrf -> csrf.disable())
-        .authorizeHttpRequests(authz -> authz
-            .requestMatchers("/api/v1/pet-types/**").permitAll() 
-            .requestMatchers("/api/v1/pets/**").permitAll() 
-            .requestMatchers("/api/v1/bff/web/login").permitAll()  
-            .requestMatchers("/api/v1/bff/web/users").permitAll()  
-            .anyRequest().permitAll()
-        );
+    public JwtDecoder jwtDecoder() {
+        String jwkUri = System.getenv("JWK_URI");
         
-    return http.build();
+        if (jwkUri == null || jwkUri.isEmpty()) {
+            jwkUri = "http://ms-auth:8083/.well-known/jwks.json";
+        }
+        
+        return NimbusJwtDecoder.withJwkSetUri(jwkUri).build();
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) 
+            .csrf(csrf -> csrf.disable())
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(auth -> auth
+                    .requestMatchers(HttpMethod.GET, "/api/health", "/actuator/health").permitAll()
+                    .requestMatchers("/api/v1/bff/web/register").permitAll()
+                    .requestMatchers("/api/v1/bff/web/login").permitAll()
+                    .requestMatchers(HttpMethod.GET, "/api/validate").authenticated()
+                    .anyRequest().authenticated()
+
+    )
+            
+            .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.decoder(jwtDecoder())));
+
+        return http.build();
+    }
+
+    @Bean
+    CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000")); 
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-        configuration.setAllowCredentials(true);
+        
+        configuration.setAllowedOrigins(List.of("*")); 
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+        configuration.setExposedHeaders(List.of("Authorization"));
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
